--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('Static/Images/Background Control.gif');/* Path to GIF */
+            background-image: url('https://eedzi.github.io/Edz-personal-website/Images/Background Control.gif');/* Path to GIF */
             background-size: cover; /* GIF cover the entire background */
             background-position: center; /* CentersGIF */
             background-repeat: repeat; /* GIF  repeating */
